<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <RadioButton
        android:id="@+id/vacantRadioButton"
        android:text="@string/quest_shop_gone_vacant_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <RadioButton
            android:id="@+id/replaceRadioButton"
            android:text="@string/quest_shop_gone_replaced_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <AutoCompleteTextView
            android:id="@+id/presetsEditText"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/quest_shop_gone_replaced_answer_hint"/>

    </LinearLayout>

    <RadioButton
        android:id="@+id/leaveNoteRadioButton"
        android:text="@string/quest_streetName_answer_noProperStreet_leaveNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
