<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_download" android:title="@string/action_download"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_upload" android:title="@string/action_upload"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_test1" android:title="T1"
          android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_test2" android:title="T2"
          android:orderInCategory="100" app:showAsAction="always" />
</menu>
