<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/buttonNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/BottomSheetButtonBarItem"
        android:text="@string/quest_generic_hasFeature_no" />

    <Button
        android:id="@+id/buttonYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/BottomSheetButtonBarItem"
        android:text="@string/quest_generic_hasFeature_yes" />

    <Button
        android:id="@+id/buttonOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/BottomSheetButtonBarItem"
        android:text="@string/quest_hasFeature_only" />

</merge>
