<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="com.google.android.flexbox.FlexboxLayout"
    tools:flexWrap="wrap">

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BottomSheetButtonBarItem"
        android:text="@string/quest_generic_hasFeature_no" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BottomSheetButtonBarItem"
        android:text="@string/quest_generic_hasFeature_yes"
        />

    <Button
        android:id="@+id/sidewalkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BottomSheetButtonBarItem"
        android:text="@string/quest_sidewalk_value_yes" />
</merge>
