<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout
        android:id="@+id/bigMenuItemsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:columnCount="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profileButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:padding="16dp"
            android:text="@string/user_profile"
            android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
            app:drawableTopCompat="@drawable/ic_profile_48dp" />

        <TextView
            android:id="@+id/enableTeamModeButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:padding="16dp"
            android:text="@string/team_mode"
            android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
            app:drawableTopCompat="@drawable/ic_team_mode_48dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/disableTeamModeButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:padding="16dp">

            <de.westnordost.streetcomplete.screens.main.teammode.TeamModeColorCircleView
                android:id="@+id/teamModeColorCircle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                app:layout_constraintBottom_toTopOf="@+id/disableTeamModeText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/disableTeamModeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_mode_exit"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/aboutButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:padding="16dp"
            android:text="@string/action_about2"
            android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
            app:drawableTopCompat="@drawable/ic_info_outline_48dp" />

        <TextView
            android:id="@+id/overlaysButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:padding="16dp"
            android:text="@string/action_overlays"
            android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
            app:drawableTopCompat="@drawable/ic_overlay_48dp" />

        <TextView
            android:id="@+id/settingsButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:padding="16dp"
            android:text="@string/action_settings"
            android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
            app:drawableTopCompat="@drawable/ic_settings_48dp" />

        <TextView
            android:id="@+id/downloadButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:padding="16dp"
            android:text="@string/action_download"
            android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
            app:drawableTopCompat="@drawable/ic_search_48dp" />

    </GridLayout>

</RelativeLayout>
