<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dip"
    android:paddingBottom="2dip"
    android:paddingStart="8dip"
    android:paddingEnd="8dip">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dip"
        android:paddingEnd="16dip"
        >

        <TextView
            android:id="@+id/title"
            style="@style/QuestTitleQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_leave_new_note_title"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_leave_new_note_description"
            android:labelFor="@+id/noteInput"/>

        <EditText
            android:id="@+id/noteInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:gravity="top|start"
            android:minLines="3"
            android:maxLines="12"
             />

    </LinearLayout>

    <LinearLayout android:id="@+id/buttonPanel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:divider="?android:attr/dividerHorizontal"
                  android:showDividers="beginning"
                  android:dividerPadding="0dip"
                  android:paddingTop="@dimen/activity_horizontal_margin"
                  style="?android:attr/buttonBarStyle"
                  android:layoutDirection="locale">
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/quest_leave_new_note_no"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:text="@string/quest_leave_new_note_yes"
            style="?android:attr/buttonBarButtonStyle"
             />
    </LinearLayout>
</LinearLayout>
