<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout
        android:id="@+id/bigMenuItemsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:columnCount="2">

        <TextView
            android:id="@+id/profileButton"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
            android:text="@string/user_profile"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            app:drawableTopCompat="@drawable/ic_profile_48dp" />

        <TextView
            android:id="@+id/settingsButton"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
            android:layout_gravity="center"
            android:text="@string/action_settings"
            style="?android:attr/borderlessButtonStyle"
            app:drawableTopCompat="@drawable/ic_settings_48dp" />

        <TextView
            android:id="@+id/aboutButton"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
            android:layout_gravity="center"
            android:text="@string/action_about2"
            style="?android:attr/borderlessButtonStyle"
            app:drawableTopCompat="@drawable/ic_info_outline_48dp" />

    </GridLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_below="@id/bigMenuItemsContainer"
        android:layout_alignEnd="@id/bigMenuItemsContainer"
        android:layout_alignStart="@id/bigMenuItemsContainer"
        android:background="@drawable/button_bar_divider"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/bigMenuItemsContainer"
        android:layout_alignStart="@id/bigMenuItemsContainer"
        android:orientation="vertical"
        android:layout_below="@id/divider">

        <TextView
            android:id="@+id/downloadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/action_download"
            android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
            style="?android:attr/borderlessButtonStyle"
            app:drawableStartCompat="@drawable/ic_search_24dp" />

    </LinearLayout>

</RelativeLayout>

